# openbwr

./: .gitignore  AGENTS.md  README.md  SCR_COMPATIBILITY.md  SCR_TILE_COMPAT_POLICY.md  TESTING_SCR_TDD.md  build.ps1  bwgame.h  replay.h  run.ps1  scr_tile_compat.h
mini-openbwapi/: CMakeLists.txt
tests/: scr_compat_contract_tests.cpp
tools/: openbw_asset_classify.cpp  promote_scan_fixtures.py  replay_determinism_smoke.py  scan-openbw-assets.ps1  validate_map_snapshot.py  validate_scr_fixture_inventory.py
ui/: CMakeLists.txt  gfxtest.cpp  ui.h
